# cratesploring

./: .gitignore  README.md
axum_explorer/: Cargo.toml  exploring_axum_deepdive.md
axum_explorer/axum_diesel/: Cargo.toml  diesel.toml
axum_explorer/axum_diesel/migrations/2024-09-25-072358_create_employee/: down.sql  up.sql
axum_explorer/axum_diesel/src/: lib.rs  main.rs  models.rs  schema.rs
axum_explorer/axum_surreal/: .dircolors  Cargo.toml
axum_explorer/axum_surreal/src/: lib.rs  main.rs
axum_explorer/book_maker/: Cargo.toml
axum_explorer/book_maker/src/: book.rs  data.rs  main.rs
axum_explorer/demo_axum/: Cargo.toml
axum_explorer/demo_axum/src/: main.rs
axum_explorer/hello-world/: Cargo.toml
axum_explorer/hello-world/src/: main.rs
axum_explorer/prac_axum01/: Cargo.toml
axum_explorer/prac_axum01/src/: main.rs
axum_explorer/prac_axum02/: Cargo.toml
axum_explorer/prac_axum02/src/: fncall.rs  main.rs
axum_explorer/prac_axum03/: Cargo.toml  diesel.toml
axum_explorer/prac_axum03/migrations/2024-09-28-004527_create_practrack/: down.sql  up.sql
axum_explorer/prac_axum03/src/: axum_funcs.rs  lib.rs  main.rs  models.rs  schema.rs
axum_explorer/random_gen/: Cargo.toml  index.html
axum_explorer/random_gen/src/: main.rs
book_reqwester/: Cargo.toml
book_reqwester/src/: book.rs  main.rs
candle_explorer/: Cargo.toml  env_demo
candle_explorer/candle-gemma/: Cargo.toml
candle_explorer/candle-gemma/src/: main.rs
candle_explorer/candle-tutorial/: Cargo.toml
candle_explorer/candle-tutorial/src/: main.rs
candle_explorer/candle-tutorial/src/models/: roberta.rs
candle_explorer/embedding-bert/: Cargo.toml  build-lib.sh
candle_explorer/gemma-tokenizer/: Cargo.toml
candle_explorer/gemma-tokenizer/src/: main.rs
candle_explorer/hfhub-intro/: Cargo.toml
candle_explorer/hfhub-intro/src/: main.rs
candle_explorer/intro1/: Cargo.toml
candle_explorer/model-inferer/: Cargo.toml
candle_explorer/model-inferer/src/: main.rs
candle_explorer/onnx-inference/: Cargo.toml
candle_explorer/onnx-inference/src/: main.rs
candle_explorer/phi3-inferer/: Cargo.toml
candle_explorer/phi3-inferer/src/: main.rs
common_resources/: configuring_openssl.md  crates_features_enabling.md  cuda_install.sh  cudnn_tocratesploring.md  ec2_script.sh  nvidia_driver_install.md  releasing_rust_bins.md  surreal_axum_divein.md  wasm_compilation.md
common_resources/blog_data/: kalosm_pad.md
floneum_explorer/: Cargo.toml  history.txt
floneum_explorer/doc-table-divein/: Cargo.toml
floneum_explorer/doc-table-divein/src/: main.rs
floneum_explorer/documents/: pg1513.txt  sampleba  samplebb  samplebc  samplebd  samplebe  samplebf  samplebg  samplebh  samplebi  samplebj  samplebr  samplebt  samplebv  samplebx  samplebz
floneum_explorer/emb_search/: Cargo.toml
floneum_explorer/emb_search/src/: main.rs
floneum_explorer/kalosm_vdb/: Cargo.toml
floneum_explorer/kalosm_vdb/src/: main.rs
floneum_explorer/next-gen-ai/: Cargo.toml
floneum_explorer/next-gen-ai/src/: main.rs
floneum_explorer/structured/: Cargo.toml
llm_explorer/: Cargo.toml
llm_explorer/gpt4o/: Cargo.toml
llm_explorer/gpt4o/src/: fncall.rs  main.rs  resp_completion.rs  resp_fncall.rs
openai_explorer/: Cargo.toml  resp1.json
openai_explorer/openai100/: Cargo.toml  code_recd.md
openai_explorer/openai100/src/: main.rs
openai_explorer/openai101/: Cargo.toml
openai_explorer/openai101/src/: main.rs
openai_explorer/openai102/: Cargo.toml
openai_explorer/openai102/src/: main.rs
openai_explorer/openai103/: Cargo.toml
openai_explorer/openai103/src/: main.rs
openai_explorer/openai104/: Cargo.toml
openai_explorer/openai104/src/: main.rs
ormexplorer/: Cargo.toml
ormexplorer/diesel_prac1/: .env  Cargo.toml  diesel.toml
ormexplorer/diesel_prac1/migrations/2024-09-24-161204_create_table1/: down.sql  up.sql
ormexplorer/diesel_prac1/migrations/2024-09-25-033429_create_employee/: down.sql  up.sql
ormexplorer/diesel_prac1/src/: lib.rs  main.rs  models.rs  schema.rs
ormexplorer/diesel_start/: Cargo.toml  diesel.toml  diesel_steps.md  filter_disambiguation.md
ormexplorer/diesel_start/migrations/2024-09-24-044923_create_posts/: down.sql
ormexplorer/diesel_start/src/: lib.rs  main.rs  models.rs
ormexplorer/document_loader/: Cargo.toml  history.txt
ormexplorer/document_loader/src/: main.rs
ormexplorer/surreal_dive0/: Cargo.toml  history.txt
ormexplorer/surreal_dive0/src/: main.rs
ormexplorer/surreal_dive1/: Cargo.toml
ormexplorer/surreal_dive1/src/: main.rs
ormexplorer/vector_embed/: Cargo.toml  history.txt
ormexplorer/vector_embed/src/: lib.rs  main.rs
surreal_reqwester/: Cargo.toml  history.txt
surreal_reqwester/src/: main.rs
tui_explorer/: Cargo.toml
tui_explorer/ratatui_basic/: Cargo.toml
tui_explorer/ratatui_basic/src/: main.rs
