[package]
name = "axum_diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15.7"
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
