[package]
name = "axum_surreal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.18", features = ["derive"] }
dotenv = "0.15.0"
hyper = { version = "1.4.1", features = ["server"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = "2.0.2"
tokio = { version = "1.40.0", features = ["full"] }
uuid = "1.10.0"
