[package]
name = "book_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
hyper = { version = "1.4.1", features = ["full"] }
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
