[package]
name = "prac_axum01"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
base64 = "0.22.1"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
