[package]
name = "embedding-bert"
version = "0.1.0" 
edition = "2021" 

[dependencies]
openssl = {version="0.10.66" , features=["vendored"]}
anyhow = "1.0.89"
candle-core = "0.7.2"
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
hf-hub = "0.3.2"
ndarray = "0.16.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = "2.0.2"
tokenizers = {version = "0.20.0", features = ["unstable_wasm"]}
tokio = { version = "1.40.0", features = ["full"] }
num-traits = { version = "0.2.19"}
byteorder = { version = "1.5.0"}
log = { version = "0.4.22"}
rand = { version = "0.8.5"}
safetensors = { version = "0.4.5"}

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.11"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.0"
