[package]
name = "gemma-tokenizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
candle-core = "0.7.1"
candle-examples = "0.7.1"
candle-nn = "0.7.1"
candle-transformers = "0.7.1"
clap = { version = "4.5.18", features = ["derive"] }
dotenvy = "0.15.7"
hf-hub = {version = "0.3.2", features = ["tokio"]}
openssl = { version = "0.10.66", features = ["vendored"] }
records = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokenizers = { version = "0.19.1", default-features = false }
