[package]
name = "next-gen-ai"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["kalosm"]
full = ["kalosm", "tokio"]

[dependencies]
dotenvy = "0.15.7"
kalosm = { version = "0.3.2",optional = true, git = "https://github.com/floneum/floneum" }
tokio = { version = "1.40.0", optional = true }
