[package]
name = "vector_embed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
candle-core = "0.7.2"
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
hf-hub = "0.3.2"
ndarray = "0.16.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = "2.0.2"
tokenizers = "0.20.0"
tokio = { version = "1.40.0", features = ["full"] }
